--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "fize/third-wechat",
     "description": "微信接口API，与官方文档同步实现。",
-    "license": "Apache-2.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "FizeChan",
@@ -13,10 +13,13 @@
         "ext-json": "*",
         "ext-curl": "*",
         "ext-libxml": "*",
-        "fize/net": "*@dev",
-        "fize/crypt": "*@dev",
-        "fize/cache": "*@dev",
-        "fize/xml": "*@dev"
+        "fize/net": "~4.0",
+        "fize/crypt": "~3.2",
+        "fize/cache": "~3.0",
+        "fize/xml": "~2.1"
+    },
+	"require-dev": {
+        "phpunit/phpunit": "^8.0.0"
     },
 	"autoload": {
         "psr-4": {
