修复素材上传失败问题，修正原先单元测试。

--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,29 @@
 {
-  "name": "fize/third-wechat",
-  "description": "微信接口API，与官方文档同步实现。",
-  "license": "MIT",
   "authors": [
     {
       "name": "FizeChan",
       "email": "chenfengzhan@qq.com"
     }
   ],
-  "require": {
-    "php": ">=7.0.0",
-    "ext-json": "*",
-    "ext-curl": "*",
-    "ext-libxml": "*",
-    "fize/crypt": "~3.2",
-    "fize/cache": "~3.0",
-    "fize/net": "~4.0",
-    "fize/xml": "~2.1"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^8.0.0"
-  },
   "autoload": {
     "psr-4": {
       "fize\\third\\wechat\\": "src"
     }
+  },
+  "description": "微信接口API，与官方文档同步实现。",
+  "license": "MIT",
+  "name": "fize/third-wechat",
+  "require": {
+    "php": ">=7.0.0",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "ext-libxml": "*",
+    "fize/cache": "~3.2.0",
+    "fize/crypt": "~3.2.0",
+    "fize/net": "~4.1.0",
+    "fize/xml": "~2.1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~9.1.0"
   }
 }
