移除ApiException异常类，改为统一管理。

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "ext-json": "*",
     "fize/cache": "*",
     "fize/crypt": "*",
+    "fize/exception": "*",
     "fize/http": "*"
   },
   "suggest": {
