初步解决消息体加解密问题。

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     "fize/http": "*"
   },
   "suggest": {
+    "ext-dom": "*",
     "ext-libxml": "*",
+    "ext-openssl": "*",
     "ext-simplexml": "*"
   },
   "autoload-dev": {
